--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
       .card {
         background: white;
         border-radius: 20px;
+        min-height: 240px;
         padding: 30px;
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease;
@@ -207,7 +208,7 @@
       }
 
       .card h3 {
-        font-size: 24px;
+        font-size: 22px;
         color: #1a4d34;
         margin-bottom: 15px;
         font-weight: 700;
